# Kerno

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
kerno/: CMakeLists.txt  pch.hpp
kerno/src/: kerno.hpp
kerno/src/kerno/: application.cpp  application.hpp  core.hpp  entry_point.hpp  logger.cpp  logger.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
